Added links to LDS

--- a/notebooks/1. Introduksjon/6. Dokumentasjon av datasett.ipynb
+++ b/notebooks/1. Introduksjon/6. Dokumentasjon av datasett.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Les inn en spark dataframe som man ønsker å lage dokumentasjon på"
+    "#### Les inn en spark dataframe som man ønsker å lage dokumentasjon på:"
    ]
   },
   {
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Basert på dette skjemaet kan vi generere et \"template\" for å kunne dokumentere variablene og datasettet"
+    "#### Basert på dette skjemaet kan vi generere et \"template\" for å kunne dokumentere variablene og datasettet:"
    ]
   },
   {
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Med utgangspunkt i det genererte \"template\" kan dette knyttes til datasettet. Her har man oppdatert beskrivelsesfeltene med mer utfyllende informasjon"
+    "#### Med utgangspunkt i det genererte \"template\" kan dette knyttes til datasettet. Her har man oppdatert beskrivelsesfeltene med mer utfyllende informasjon:"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Når datasetet lagres blir dokumentasjonen automatisk fanget opp og lagret i LDS, slik at dette blir søkbart."
+    "#### Når datasetet lagres blir dokumentasjonen automatisk fanget opp og lagret i LDS, slik at dette blir søkbart:"
    ]
   },
   {
@@ -114,6 +114,34 @@
    "source": [
     "ds.write.option(\"valuation\", \"INTERNAL\").option(\"state\", \"INPUT\").path(\"/felles/veiledning/pyspark/eksempler/areal/dokumentert\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Datasettet skal nå kunne gjenfinnes i LDS:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Åpne datasett: https://lds-client.staging-bip-app.ssb.no/gsim/UnitDataSet/felles.veiledning.pyspark.eksempler.areal.dokumentert.Areal/view"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[GraphQL visning (staging)](https://exploration-lds.staging-bip-app.ssb.no/graphiql/?query=%7B%0A%20%20UnitDataSetById(id%3A%20%22felles.veiledning.pyspark.eksempler.areal.dokumentert.Areal%22)%20%7B%0A%20%20%20%20id%0A%20%20%20%20dataSourcePath%0A%20%20%20%20unitDataStructure%20%7B%0A%20%20%20%20%20%20name%20%7B%0A%20%20%20%20%20%20%20%20languageText%0A%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20logicalRecords%20%7B%0A%20%20%20%20%20%20%20%20edges%20%7B%0A%20%20%20%20%20%20%20%20%20%20node%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20id%0A%20%20%20%20%20%20%20%20%20%20%20%20shortName%0A%20%20%20%20%20%20%20%20%20%20%20%20instanceVariables%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20edges%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20node%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20name%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20languageText%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20description%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20languageText%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%7D%0A%20%20%20%20%7D%0A%20%20%7D%0A%7D%0A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
