--- a/notebooks/1. Introduksjon/6. Dokumentasjon av datasett.ipynb
+++ b/notebooks/1. Introduksjon/6. Dokumentasjon av datasett.ipynb
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Åpne datasett: https://lds-client.staging-bip-app.ssb.no/gsim/UnitDataSet/felles.veiledning.pyspark.eksempler.areal.dokumentert.Areal/view"
+    "[Åpne datasett i LDS (staging)](https://lds-client.staging-bip-app.ssb.no/gsim/UnitDataSet/felles.veiledning.pyspark.eksempler.areal.dokumentert.Areal/view)"
    ]
   },
   {
