intro til pandas DataFrame
lagt inn eksempler på pandas DataFrame

--- a/notebooks/1. Introduksjon/Intro til Pandas DataFrame.ipynb
+++ b/notebooks/1. Introduksjon/Intro til Pandas DataFrame.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "## Grunnleggende operasjonen som kan gjøres på et pandas DataFrame:\n",
     "\n",
-    "1. Lage et DataFrame\n",
+    "1. Lage et pandas DataFrame\n",
     "2. Gjøre operasjoner på rader og kolonner\n",
     "3. Velge ut, legge til og fjerne data\n",
     "4. Håndtere manglende (missing) data\n",
