Endre navn på dokumenter
Strukturert litt om på notebook-dokumentene

--- a/notebooks/1. Introduksjon/3. Opprette og skrive PySpark DataFrame til felles datalager.ipynb
+++ b/notebooks/1. Introduksjon/3. Opprette og skrive PySpark DataFrame til felles datalager.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Datasett, tabeller og filer\n",
+    "# Datasett, tabeller og filer\n",
     "<font size=2>Datasett er en organisert samling av data (jf. definisjonen av <a href=\"https://statswiki.unece.org/display/GSIMclick/Data+Set\" target=\"Data Set (GSIM)\">'Data Set'</a> i GSIM). Eksempler på datasett kan være tidsserier, utvalgsdata, forløpsdata, transaksjonsdata og registre.\n",
     "</font>"
    ]
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dataframe\n",
+    "## Dataframe\n",
     "<font size=2>I pyspark er <code>DataFrame</code> et dimensjonalt datasett organisert i navngitte kolonner. Det tilsvarer konseptuelt en tabell i en relasjonsdatabase eller en dataramme (data frame) i R eller Python. <code>DataFrame</code> kan konstrueres fra mange kilder, som f.eks. strukturerte datafiler eller databaser. <code>DataFrame</code> API er også tilgjengelig i Scala, Java, Python og R.\n",
     "</font>"
    ]
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Konstruere en Dataframe i pyspark\n",
+    "## Konstruere en Dataframe i pyspark\n",
     "De neste paragrafene etableres tre datasett (<code>pyspark.sql.Dataframe</code>) for testformål.\n",
     "\n",
     "Koden for å lage en dataframe i pyspark:\n",
@@ -521,7 +521,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Forklar hvordan lagre data til datalager\n",
+    "## Hvordan lagre data til datalager\n",
     "\n",
     "Koden for å skrive datasettene (DataFrame) til datalageret på dataplattformen:\n",
     "\n",
@@ -541,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Skrive datasettet df_land_kode til datalageret (kode)"
+    "### Skrive datasettet df_land_kode til datalageret (kode)"
    ]
   },
   {
@@ -561,7 +561,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Skrive datasettet df_land_areal til datalageret (kode)"
+    "### Skrive datasettet df_land_areal til datalageret (kode)"
    ]
   },
   {
@@ -581,7 +581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Skrive datasettet df_land_bnp til datalageret (kode)"
+    "### Skrive datasettet df_land_bnp til datalageret (kode)"
    ]
   },
   {
@@ -601,7 +601,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Skrive datasettet df_land_innbyggerantall_2020 til datalageret (kode)"
+    "### Skrive datasettet df_land_innbyggerantall_2020 til datalageret (kode)"
    ]
   },
   {
@@ -621,7 +621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Skrive datasettet df_land_innbyggerantall_2018 til datalageret (kode)"
+    "### Skrive datasettet df_land_innbyggerantall_2018 til datalageret (kode)"
    ]
   },
   {
@@ -641,7 +641,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Skrive datasettet df_land_innbyggerantall_2017 til datalageret (kode)"
+    "### Skrive datasettet df_land_innbyggerantall_2017 til datalageret (kode)"
    ]
   },
   {
