--- a/notebooks/4. Oppgaver/Løsning oppgave 3.ipynb
+++ b/notebooks/4. Oppgaver/Løsning oppgave 3.ipynb
@@ -94,7 +94,11 @@
    "outputs": [],
    "source": [
     "#Finner de fem største landene via det sorterte datasettet\n",
-    "de_fem_storste = df_bnp_og_innbyggerantall_sort.collect()[12:17] \n",
+    "#de_fem_storste = df_bnp_og_innbyggerantall_sort.collect()[12:17] \n",
+    "\n",
+    "antall_land = df_bnp_og_innbyggerantall_sort.count()\n",
+    "\n",
+    "de_fem_storste = df_bnp_og_innbyggerantall_sort.collect()[antall_land-5:antall_land] \n",
     "df_de_fem_storste = spark.createDataFrame(de_fem_storste) "
    ]
   },
@@ -170,6 +174,13 @@
     "print(\"*********************************** Gjennomsnitt av BNP per capita for de fem minste landene ***********************************\")\n",
     "minste_result.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
