--- a/notebooks/1. Introduksjon/3. Opprette og skrive PySpark DataFrame til felles datalager.ipynb
+++ b/notebooks/1. Introduksjon/3. Opprette og skrive PySpark DataFrame til felles datalager.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql.types import StructType, StructField"
+    "from pyspark.sql.types import *"
    ]
   },
   {
