--- a/notebooks/1. Introduksjon/3. Opprette og skrive PySpark DataFrame til felles datalager.ipynb
+++ b/notebooks/1. Introduksjon/3. Opprette og skrive PySpark DataFrame til felles datalager.ipynb
@@ -31,6 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pyspark.sql.functions as F\n",
+    "\n",
     "from pyspark.sql.types import *"
    ]
   },
