Lagt på mer beskrivende kommentar mht dubletter

--- a/notebooks/1. Introduksjon/3. Opprette og skrive PySpark DataFrame til felles datalager.ipynb
+++ b/notebooks/1. Introduksjon/3. Opprette og skrive PySpark DataFrame til felles datalager.ipynb
@@ -67,7 +67,8 @@
     "    StructField('Kilde', StringType(), False)]\\\n",
     "    )\n",
     "\n",
-    "# dubletter:\n",
+    "# Datasettet inneholder dubletter, men vi bryr oss ikke om det nå:\n",
+    "#\n",
     "# ('Norge',385178,2018,'NO','https://www.fn.no/Statistikk/Areal')\n",
     "# ('Norge',400000,2020,'NO','RKR: Avrundet til nærmeste 10 000')\n",
     "# ('Kroatia',56590,2018,'HR','https://www.fn.no/Statistikk/Areal')\n",
@@ -395,7 +396,7 @@
     "    StructField('År', IntegerType(), False),\\\n",
     "    StructField('Kilde', StringType(), False)])\n",
     "\n",
-    "# Dubletter:\n",
+    "# Datasettet inneholder dubletter, men vi bryr oss ikke om det nå:\n",
     "# \n",
     "# ('Norge','NO',5449693,2020,'https://www.fn.no/Statistikk/Befolkningstall')\n",
     "# ('Norge','NO',5353363,2018,'https://www.fn.no/Statistikk/Befolkningstall')\n",
