Fikset skrivefeil, og tydeliggjort eksempler for missing

--- a/notebooks/1. Introduksjon/7. Intro til Pandas DataFrame.ipynb
+++ b/notebooks/1. Introduksjon/7. Intro til Pandas DataFrame.ipynb
@@ -17,9 +17,9 @@
     "id": "gNnM4vBVrI6O"
    },
    "source": [
-    "[Pandas](https://pandas.pydata.org/) er et python-bibliotek som gir effektive og brukervennlige datastruturer for dataanalyse. En av disse strukturene er Pamndas DataFrame som består av data organisert i rader og kolonner.\n",
+    "[Pandas](https://pandas.pydata.org/) er et python-bibliotek som gir effektive og brukervennlige datastruturer for dataanalyse. En av disse strukturene er Pandas DataFrame som består av data organisert i rader og kolonner.\n",
     "\n",
-    "Biblioteket er tilgjengelig for bruk i SSBs dapa JupyterLab (https://jupyter.prod-bip-app.ssb.no/):\n",
+    "Biblioteket er tilgjengelig for bruk i SSBs dapla JupyterLab (https://jupyter.prod-bip-app.ssb.no/):\n",
     "\n",
     "<code>import pandas as pd</code>"
    ]
@@ -315,13 +315,17 @@
    "source": [
     "Legge til en Kolonne kan gjøres på flere måter.\n",
     "\n",
-    "Vi kan lage en liste med kolonneverdier:"
+    "Vi kan lage en liste med kolonneverdier, og legge dem til på denne måten:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "fifa_poeng_2020 = [1765,1733,1712,1661,1645,1451,1602]\n",
@@ -336,7 +340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Så kan vi bruke DataFrame-metode `instert`"
+    "Eller vi kan bruke DataFrame-metode `insert()`"
    ]
   },
   {
@@ -379,7 +383,7 @@
     "id": "FS9roj5U0bof"
    },
    "source": [
-    "Manglende data forekommer ofte som `NaN` (Not a number). DataFrame metoden `isnull()` kan brukes for å sjekke om en observasjon er null. "
+    "Manglende data forekommer ofte som `NaN` (Not a number). "
    ]
   },
   {
@@ -418,12 +422,28 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DataFrame metoden `isnull()` kan brukes for å sjekke om en observasjon er missing (null/NaN). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_land_fifa.isnull()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "8W-j0QLy8Z2h"
    },
    "source": [
-    "Når vi nå har nullverider, så kan vi endre disse til med bruk av DataFrame metoden `fillna()`"
+    "Når vi nå har missingverdier så kan vi endre disse med bruk av DataFrame-metoden `fillna()`"
    ]
   },
   {
@@ -440,7 +460,8 @@
    },
    "outputs": [],
    "source": [
-    "df_land_fifa.fillna(0)"
+    "df_land_fifa = df_land_fifa.fillna(0)\n",
+    "df_land_fifa"
    ]
   },
   {
@@ -473,7 +494,7 @@
     "id": "vxtuVjNc4qjt"
    },
    "source": [
-    "Vi kan endre kolonnenavnene ved å bruke DataFrame metoden `rename()`."
+    "Vi kan endre kolonnenavnene ved å bruke DataFrame-metoden `rename()`."
    ]
   },
   {
