--- a/notebooks/2. Funksjoner i klargjøring/2. Håndtere dubletter.ipynb
+++ b/notebooks/2. Funksjoner i klargjøring/2. Håndtere dubletter.ipynb
@@ -93,6 +93,7 @@
    "source": [
     "#Sorterer dataframen etter variabelen \"land\" alfabetisk\n",
     "df_innbyggerantall_sort = df_innbyggerantall.orderBy('Land')\n",
+    "\n",
     "#lister ut den sorterte dataframen\n",
     "df_innbyggerantall_sort.show()"
    ]
@@ -101,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.Telle opp antall duplikater  dataframen og vise i liste\n",
+    "### 3. Telle opp antall duplikater i Dataframe og vise dette i liste\n",
     "<font size=2><code>'dataframe'.groupBy('dataframe'.columns)\\\n",
     "    .count()\\\n",
     "    .where(F.col('count') > 1)\\\n",
@@ -173,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#lager ny dataframe med bestående av land og tilhørende duplikater. \n",
+    "#lager ny dataframe bestående av land og tilhørende duplikater. \n",
     "\n",
     "df_land_dup=df_innbyggerantall_sort.groupBy(df_innbyggerantall_sort.Land)\\\n",
     "    .count()\\\n",
@@ -258,7 +259,7 @@
     "df_innbyggerantall_udub=df_innbyggerantall.dropDuplicates()\n",
     "df_innbyggerantall_udub.show()\n",
     "df_innbyggerantall_udub.count()\n",
-    "#\n"
+    "\n"
    ]
   },
   {
@@ -279,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Velger den første duplikatene\n",
+    "#Velger de første duplikatene\n",
     "#Overfører df_land_dub_alle til pandas dataframe (pdf)\n",
     "pdf = df_land_dub_alle.toPandas()\n",
     "df_pdf_udub = pdf.drop_duplicates(subset=['Land'], keep='first', inplace=False)\n",
