Endret litt på eksempelet

--- a/notebooks/3. Fellesfunksjoner i SSB_Spark_tools/2. Håndtere manglende verdier.ipynb
+++ b/notebooks/3. Fellesfunksjoner i SSB_Spark_tools/2. Håndtere manglende verdier.ipynb
@@ -64,8 +64,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Bruker en av missingfunksjonene (missing_correction_number) til å korrigere missingverdien:\n",
-    "Denne funksjonen gir to resultater: en dataframe med korrigerte verdier (som vi her velger å kalle <i>df_bnp_imp </i>) og en logg over antall endrede verdier for hver variabel (her kalt <i> bnp_log </i>)."
+    "#### Vil bruke en av missingfunksjonene (missing_correction_number) til å korrigere missingverdien:\n",
+    "##### Ser først på hva vi kan lese ut av help()-funksjonen om denne"
    ]
   },
   {
@@ -74,6 +74,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Skriver help() og ser på resultatet\n",
+    "help(stedi.missing_correction_number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Forklaring av resultatet: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### For å kjøre funksjonen må man skrive\n",
+    "<b>df_navn, log_navn =  stedi.missing_correction_number(df, correction_value=0, exception_for=[])</b> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Foran likhetstegnet må man oppgi to navn man selv bestemmer.<b> Rekkefølgen er viktig, da funksjonen bestemmer hvilket av resultatene som kommer først og sist:</b>\n",
+    "<ul>\n",
+    "<li> <b>df_navn</b> er navnet på det korrigerte datasettet som er første del av resultatet \n",
+    "<li> <b>log_navn</b> er navnet på logg'en som er andre del av resultatet \n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Bak likhetstegnet oppgir man:\n",
+    "<ul>\n",
+    "<li> <b>df</b>, som er navnet på datasettet som inneholder variablene som skal korrigeres fra missing.   \n",
+    "<li> <b>correction_value</b>, som angir hvilken verdi missing skal korrigeres til. Oppgis ingen verdi her, er default at missing korrigeres til 0.\n",
+    "<li> <b>exception_for</b>, som angir variable man ikke ønsker å korrigere fra missing. Oppgis ingen variable her, endres alle numeriske variable fra missing til korrieringsverdien.\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Eksempler på bruk:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Endrer fra missing til 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sender bare inn navnet på det opprinnelige datasettet som inneholder variabelen som skal korrigeres fra missing. Setter ikke inn noe for de andre parametrene.\n",
     "df_bnp_imp, bnp_log = stedi.missing_correction_number(df_bnp)"
    ]
   },
@@ -98,11 +161,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Endrer fra missing til 1000:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Må sette correction_value = 1000\n",
+    "df_bnp_imp1, bnp_log1 = stedi.missing_correction_number(df_bnp, correction_value=1000, exception_for = [])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_bnp_imp1.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bnp_log1"
+   ]
   }
  ],
  "metadata": {
