--- a/notebooks/1. Introduksjon til JupyterLab, PySpark og Python/JupyterLab for Dapla.ipynb
+++ b/notebooks/1. Introduksjon til JupyterLab, PySpark og Python/JupyterLab for Dapla.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataplattformen i SSB (Dapla) tilbyr [JupyterLab](https://jupyterlab.readthedocs.io/en/stable/) som verktøy for å designe, bygge og produsere statistikk."
+    "Dataplattformen i SSB ([Dapla](https://github.com/statisticsnorway/dapla-project)) tilbyr [JupyterLab](https://jupyterlab.readthedocs.io/en/stable/) som verktøy for å designe, bygge og produsere statistikk."
    ]
   },
   {
