Noen små endringer

--- a/notebooks/Introduksjon til JupyterLab, PySpark og Python/JupyterLab for Dapla.ipynb
+++ b/notebooks/Introduksjon til JupyterLab, PySpark og Python/JupyterLab for Dapla.ipynb
@@ -15,6 +15,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Innhold:\n",
+    "- [Velge kjerne](Velge%20kjerne.ipynb)\n",
+    "- [Slå av kjerner](Sl%C3%A5%20av%20kjerner.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
