--- a/notebooks/Introduksjon til JupyterLab, PySpark og Python/Velge kjerne.ipynb
+++ b/notebooks/Introduksjon til JupyterLab, PySpark og Python/Velge kjerne.ipynb
@@ -15,20 +15,8 @@
     "- PySpark (k8s) : \n",
     "- Python 3 : \n",
     "\n",
-    "### Hvor"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Hvordan velge kjerne\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Hvordan velge kjerne\n",
+    "\n",
     "### Hvordan endre kjerne"
    ]
   },
