Rettet feil i beskrivelsen av funksjoner

--- a/notebooks/2. Funksjoner i klargjøring/5. Logisk imputering.ipynb
+++ b/notebooks/2. Funksjoner i klargjøring/5. Logisk imputering.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "source": [
     "### Funksjoner for logisk imputering\n",
-    "<font size=2>Det er blitt laget tre funksjonene i Pyspark som hh.endrer en negative verdi til tallet 0, en negativ verdi til positiv og en missingverdi til null. Selve koden finnes i neste paragraf og eksempler på hvordan de brukes finnes lenger ned i noten:\n",
+    "<font size=2>Det er blitt laget tre funksjonene i Pyspark som henholdsvis endrer en negativ verdi til tallet 0, en negativ verdi til positiv verdi, og en missingverdi til tallet 0. Selve koden finnes i neste paragraf og eksempler på hvordan de brukes finnes lenger ned i noten:\n",
     "<li> <code>set_neg_to_zero(df, col_names)</code>:\n",
     "<li> <code>set_neg_to_plus(df, col_names)</code>:\n",
     "<li> <code>set_miss_to_zero(df, col_names)</code>:\n",
