--- a/notebooks/2. Funksjoner i klargjøring/6. Beregninger.ipynb
+++ b/notebooks/2. Funksjoner i klargjøring/6. Beregninger.ipynb
@@ -117,7 +117,7 @@
    "metadata": {},
    "source": [
     "### Lage en grupperingsvariabel\n",
-    "<font size=2>For å vise eksempler på fordelingsberegninger lager vi en grupperingsvariabel på befolkningstettet: <b>Tetthetsgruppe</b> hvor befolkningstettet under 100 er gruppe 1 mens de over er i gruppe 2. Dette gjøres ved å benytte en logisk betingelse med funksjonene <code>when('betingelse', 'sannverdi').otherwise('usannverdi')</code> i kombinasjon med <code>withColumn</code>. For å kunne sette en konstantverdi (1 eller 2) må vi benytte funksjonen <code>lit('konstantverdi')</code>.\n",
+    "<font size=2>For å vise eksempler på fordelingsberegninger lager vi en grupperingsvariabel på befolkningstetthet: <b>Tetthetsgruppe</b> hvor befolkningstetthet under 100 er gruppe 1 mens de over er i gruppe 2. Dette gjøres ved å benytte en logisk betingelse med funksjonene <code>when('betingelse', 'sannverdi').otherwise('usannverdi')</code> i kombinasjon med <code>withColumn</code>. For å kunne sette en konstantverdi (1 eller 2) må vi benytte funksjonen <code>lit('konstantverdi')</code>.\n",
     "\n",
     "Funksjonene <code>when</code> og <code>lit()</code> krever import av bibliotek:\n",
     "<code>import pyspark.sql.functions as F</code>\n",
