Rettet skrivefeil i innledning

--- a/notebooks/3. Fellesfunksjoner i SSB_Spark_tools/2. Håndtere manglende verdier.ipynb
+++ b/notebooks/3. Fellesfunksjoner i SSB_Spark_tools/2. Håndtere manglende verdier.ipynb
@@ -8,13 +8,13 @@
     "I SSB_SPark_tools underpakke editing finnes det fire funksjoner for å behandle missingverdier:    \n",
     "<ul>\n",
     "<li> <b>missing_correction_bool</b>. \n",
-    "     Korrigerer missingverdier på Booolske variable til False eller True. Skrevet i Python og Pyspark\n",
+    "     Korrigerer missingverdier på Boolske variable til False eller True. Skrevet i Python og Pyspark\n",
     "<li> <b>missing_correction_number</b>. \n",
     "     Korrigerer missingverdier på numeriske variable til en verdi brukeren kan angi selv. Skrevet i Python og Pyspark \n",
     "<li> <b>spark_missing_correction_number</b>. \n",
     "     Korrigerer missingverdier på numeriske variable til en verdi brukeren kan angi selv. Skrevet i Python og Pyspark \n",
-    "<li> <b>spar_missing_correction_bool</b>. \n",
-    "     Korrigerer missingverdier på Booolske variable til False eller True. Skrevet i Python og Pyspark\n",
+    "<li> <b>spark_missing_correction_bool</b>. \n",
+    "     Korrigerer missingverdier på Boolske variable til False eller True. Skrevet i Python og Pyspark\n",
     "</ul>\n",
     "</font>"
    ]
