Rettet feil i beskrivelse av eksempler

--- a/notebooks/4. Oppgaver/Løsning oppgave 1.ipynb
+++ b/notebooks/4. Oppgaver/Løsning oppgave 1.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.1  Finne og leses inn datasett"
+    "#### 1.1  Finne å lese inn datasett"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lese inn datasettet om landenes innbyggerantall i 2020\n",
+    "# lese inn datasettet om landenes areal\n",
     "df_areal = spark.read.path(\"/felles/veiledning/pyspark/eksempler/areal\")"
    ]
   },
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lese inn datasettet om landenes areal\n",
+    "# lese inn datasettet om landenes innbyggerantall i 2020\n",
     "df_innbyggerantall_2020 = spark.read.path(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2020\")"
    ]
   },
