Fjernet space fra kollonnenavn og lagt til avsnitt for å lagre datasett

--- a/notebooks/4. Oppgaver/Løsning oppgave 2.ipynb
+++ b/notebooks/4. Oppgaver/Løsning oppgave 2.ipynb
@@ -205,7 +205,7 @@
    "source": [
     "# lage ny variabel (BNP/innbyggerantall)\n",
     "\n",
-    "df_bnp_innbyggerantall = df_bnp_innbyggerantall.withColumn('BNP per capita',(df_bnp_innbyggerantall['BNP']/df_bnp_innbyggerantall['Innbyggerantall']).cast(IntegerType()))\n",
+    "df_bnp_innbyggerantall = df_bnp_innbyggerantall.withColumn('BNP_per_capita',(df_bnp_innbyggerantall['BNP']/df_bnp_innbyggerantall['Innbyggerantall']).cast(IntegerType()))\n",
     "\n",
     "# fjerner kolonnene Landkode, År og Kilde\n",
     "df_bnp_innbyggerantall = df_bnp_innbyggerantall.drop(\"Landkode\", \"År\", \"Kilde\")\n",
@@ -229,10 +229,17 @@
    "source": [
     "# finne min, maks og gjennomsnitt av den nye variabelen\n",
     "\n",
-    "result = df_bnp_innbyggerantall.select([(mean(\"BNP per capita\")).cast(IntegerType()), min(\"BNP per capita\"), max(\"BNP per capita\")])\n",
+    "result = df_bnp_innbyggerantall.select([(mean(\"BNP_per_capita\")).cast(IntegerType()), min(\"BNP_per_capita\"), max(\"BNP_per_capita\")])\n",
     "\n",
     "print(\"*********************************** Minimum, maksimum og gjennomsnitt av BNP per capita ***********************************\")\n",
     "result.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.8 Lagrer datasettet"
    ]
   },
   {
@@ -240,7 +247,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_bnp_innbyggerantall.write\\\n",
+    "    .format(\"gsim\")\\\n",
+    "    .option(\"valuation\", \"INTERNAL\")\\\n",
+    "    .option(\"state\", \"INPUT\")\\\n",
+    "    .path('/felles/veiledning/pyspark/eksempler/bnp_og_innbyggerantall')"
+   ]
   }
  ],
  "metadata": {
