--- a/notebooks/4. Oppgaver/Løsning oppgave 1.ipynb
+++ b/notebooks/4. Oppgaver/Løsning oppgave 1.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.1  Finne å lese inn datasett"
+    "#### 1.1  Finne datasett og deretter lese inn"
    ]
   },
   {
