Fjernet en note

--- a/notebooks/1. Introduksjon/8. Få oversikt over innhold i dataframes med Python og PysSpark.ipynb
+++ b/notebooks/1. Introduksjon/8. Få oversikt over innhold i dataframes med Python og PysSpark.ipynb
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <b> PySpark: </b> metoder som gir mye av den samme informasjonen som info() i Python"
+    "### <b> PySpark: </b> "
    ]
   },
   {
@@ -276,6 +276,13 @@
    "source": [
     "df_areal.head(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
