Endret etter kommentarer

--- a/notebooks/1. Introduksjon/8. Intro til Pyspark.sql.Dataframe.ipynb
+++ b/notebooks/1. Introduksjon/8. Intro til Pyspark.sql.Dataframe.ipynb
@@ -193,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Velge en rad:\n",
+    "# Velge rad 1:\n",
     "rad = df_land_bnp.collect()[:1]\n",
     "\n",
     "# printe ut raden:\n",
@@ -225,28 +225,6 @@
    "metadata": {},
    "source": [
     "Kolonner kan fjernes med `drop` kommandoen"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fjerner en kolonne:\n",
-    "\n",
-    "df_land_bnp.drop('Kilde')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Den opprinnelige datframen inneholder fremdeles kolonnen \"Kilde\":\n",
-    "\n",
-    "df_land_bnp.show()"
    ]
   },
   {
@@ -323,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_bnp_ny.select([count(when(isnan(c), c)).alias(c) for c in df_bnp_ny.columns]).show()\n"
+    "df_bnp_ny.select([F.count(F.when(isnan(c), c)).alias(c) for c in df_bnp_ny.columns]).show()\n"
    ]
   },
   {
@@ -339,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_bnp_ny.select([count(when(col(c).isNull(), c)).alias(c) for c in df_bnp_ny.columns]).show()"
+    "df_bnp_ny.select([F.count(F.when(F.col(c).isNull(), c)).alias(c) for c in df_bnp_ny.columns]).show()"
    ]
   },
   {
