Endret etter kommentar

--- a/notebooks/1. Introduksjon/8. Intro til Pyspark.sql.Dataframe.ipynb
+++ b/notebooks/1. Introduksjon/8. Intro til Pyspark.sql.Dataframe.ipynb
@@ -301,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_bnp_ny.select([F.count(F.when(isnan(c), c)).alias(c) for c in df_bnp_ny.columns]).show()\n"
+    "df_bnp_ny.select([F.count(F.when(F.isnan(c), c)).alias(c) for c in df_bnp_ny.columns]).show()\n"
    ]
   },
   {
