--- a/notebooks/Tips og triks.ipynb
+++ b/notebooks/Tips og triks.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Her kommer det tips og triks"
+    "## Tips og triks"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.4"
   }
  },
  "nbformat": 4,
