--- a/notebooks/Veileder i bruk av Dapla.ipynb
+++ b/notebooks/Veileder i bruk av Dapla.ipynb
@@ -18,7 +18,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bearbeide og presentere data på dataplattformen\n"
+    "### Innhold i veilederen\n",
+    "\n",
+    "##### [Introduksjon til JupyterLap, PySpark og Python](Introduksjon%20til%20JupyterLab,%20PySpark%20og%20Python/JupyterLab%20for%20Dapla.ipynb)\n",
+    "Introduksjoner til verktøy og språk for å bygge og produsere klargjørings- og analysedelen av statistikkløpet.\n",
+    "##### [DataFrame i PySpark og Python](DataFrame%20i%20PySpark%20og%20Python/)"
    ]
   },
   {
@@ -60,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
