--- a/notebooks/Veileder i bruk av Dapla.ipynb
+++ b/notebooks/Veileder i bruk av Dapla.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "##### [Introduksjon til JupyterLap, PySpark og Python](Introduksjon%20til%20JupyterLab,%20PySpark%20og%20Python/JupyterLab%20for%20Dapla.ipynb)\n",
     "Introduksjoner til verktøy og språk for å bygge og produsere klargjørings- og analysedelen av statistikkløpet.\n",
-    "##### [DataFrame i PySpark og Python](DataFrame%20i%20PySpark%20og%20Python/)"
+    "##### [DataFrame i PySpark og Python](DataFrame%20i%20PySpark%20og%20Python/innhold.ipynb)"
    ]
   },
   {
