--- a/notebooks/Introduksjon til JupyterLab, PySpark og Python/JupyterLab for Dapla.ipynb
+++ b/notebooks/Introduksjon til JupyterLab, PySpark og Python/JupyterLab for Dapla.ipynb
@@ -23,7 +23,7 @@
     "Innhold:\n",
     "- [Velge kjerne](Velge%20kjerne.ipynb)\n",
     "- [Kort om PySpark og Python](Kort%20om%20PySpark%20og%20Python.ipynb)\n",
-    "- [Slå av kjerner](Sl%C3%A5%20av%20kjerner.ipynb)"
+    "- [Slå av kjerner](Sl%C3%A5%20av%20kjerner.ipynb)\n"
    ]
   },
   {
