--- a/notebooks/Veileder i bruk av Dapla.ipynb
+++ b/notebooks/Veileder i bruk av Dapla.ipynb
@@ -33,7 +33,7 @@
     "##### [Fellesfunksjoner (SSB Spark tools)](Fellesfunksjoner%20(SSB%20Spark%20tools)/_innhold.ipynb)\n",
     "I biblioteket SSB_Spark_tools finnes det PySpark-funksjoner som er laget til bruk i statistikkproduksjonen på SSB.\n",
     "##### [Oppgaver og løsningsforslag](Oppgaver%20og%20løsningsforslag/_innhold.ipynb)\n",
-    "Du lærer best ved å prøve selv!"
+    "Det er lettere å lære når du prøve selv!"
    ]
   },
   {
