--- a/notebooks/Finne, se og lagre data på Dapla/Finne, se og lagre data på Dapla.ipynb
+++ b/notebooks/Finne, se og lagre data på Dapla/Finne, se og lagre data på Dapla.ipynb
@@ -4,14 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Finne og beskrive data på Dapla\n",
+    "### Finne, se og lagre data på Dapla\n",
     "Det vil være ulike måter brukeren kan finne dataene på Dapla. I grove trekk kan vi skille på søk i metadata (beskrivelsene av dataene) og utforske i en filstruktur.\n",
     "\n",
     "* [Utforske og lese inn eksempeldata fra Dapla (PySpark)](Lese%20eksempeldata%20fra%20dataplattformen%20(PySpark).ipynb)\n",
-    "* [Opprette og lagre eksempeldata på Dapla (PySpark)](Opprette%20og%20skrive%20PySpark%20DataFrame%20til%20felles%20datalager.ipynb)\n",
     "\n",
+    "### Se og operere på dataene (via DataFrame-objekter)\n",
+    "I både PySpark, Python og SparkR kan datasett håndteres via et <code>DataFrame</code> <b>objekt</b>.\n",
     "\n",
-    "* [(POC) Dokumentasjon av datasett](Dokumentasjon%20av%20datasett.ipynb)"
+    "Se og lære:\n",
+    "* [Intro til Pyspark.sql.Dataframe](Intro%20til%20Pyspark.sql.Dataframe.ipynb)\n",
+    "* [Lese inn og skrive dataframes i R](Lese%20inn%20og%20skrive%20dataframes%20i%20R.ipynb)\n",
+    "* [Intro til Pandas DataFrame](Intro%20til%20Pandas%20DataFrame.ipynb)\n",
+    "\n",
+    "### Lagre data på Dapla\n",
+    "* [Opprette og lagre eksempeldata på Dapla (PySpark)](Opprette%20og%20skrive%20PySpark%20DataFrame%20til%20felles%20datalager.ipynb)"
    ]
   },
   {
