--- a/notebooks/Hvordan bruke veilederen.ipynb
+++ b/notebooks/Hvordan bruke veilederen.ipynb
@@ -4,11 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### DataFrame\n",
-    "I både PySpark og Python kan datasett håndteres via et <code>DataFrame</code> <b>objekt</b>.\n",
+    "### Forklare bruk av veilederen\n",
     "\n",
-    "Se og lære:\n",
-    "* [Intro til Pyspark.sql.Dataframe](Intro%20til%20Pyspark.sql.Dataframe.ipynb)"
+    "#### navigering\n",
+    "\n",
+    "#### kjøring\n",
+    "\n",
+    "#### endringer\n",
+    "\n",
+    "### ...\n"
    ]
   },
   {
@@ -21,9 +25,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Pyspark (local)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pyspark_local"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
