--- a/notebooks/Introduksjon til Dapla, JupyterLab og GitHub/Introduksjon til Dapla, JupyterLab og GitHub.ipynb
+++ b/notebooks/Introduksjon til Dapla, JupyterLab og GitHub/Introduksjon til Dapla, JupyterLab og GitHub.ipynb
@@ -13,7 +13,14 @@
    "source": [
     "Dataplattformen i SSB ([Dapla](https://github.com/statisticsnorway/dapla-project)) tilbyr [JupyterLab](https://jupyterlab.readthedocs.io/en/stable/) som verktøy for å bygge og produsere klargjørings- og analysedelen av et statistikkløp.\n",
     "\n",
-    "Via JupyterLab har brukeren tilgang til ulike språk for å kode produksjonsløpet. Dapla tilbyr også forskjellige tekniske infrasturkturer for enkelte av språkene."
+    "Via JupyterLab har brukeren tilgang til ulike språk for å kode produksjonsløpet. Dapla tilbyr også forskjellige tekniske infrasturkturer for enkelte av språkene.\n",
+    "\n",
+    "(TBD: LEGGE INNE EN FIGUR SOM FORKLARER Dapla, JupyterLab, GitHub ... )\n",
+    "\n",
+    "#### Apache Spark\n",
+    "Skriv litt om distribuert prosessering...\n",
+    "\n",
+    "Sparks SQL er en modul i Spark som håndterer strukturerte data. Og når vi først er inne på det, så er Spark omgivelsen, eller infrastrukturen, som anvendes i Byråets dataplattform for å prosesserer store datamengder."
    ]
   },
   {
