--- a/notebooks/Fellesfunksjoner (SSB Spark tools)/Fellesfunksjoner (SSB Spark tools).ipynb
+++ b/notebooks/Fellesfunksjoner (SSB Spark tools)/Fellesfunksjoner (SSB Spark tools).ipynb
@@ -7,7 +7,7 @@
     "## Fellesfunksjoner (SSB Spark Tools)\n",
     "\n",
     "* [Introduksjon til SSB Spark tools](Introduksjon%20til%20SSB_Spark_tools.ipynb)\n",
-    "* [Håndtere manglende verdier](Håndtere%20manglende%20verdier.ipynb)"
+    "* [Eksempel på bruk av fellesfunksjoner](Eksempel%20på%20bruk%20av%20fellesfunksjoner.ipynb)"
    ]
   },
   {
