--- a/notebooks/Hvordan bruke veilederen.ipynb
+++ b/notebooks/Hvordan bruke veilederen.ipynb
@@ -4,6 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "SSB utvikler løsninger for modernisert statistikkproduksjon. Denne veilederen har til hensikt å hjelpe nye og erfarene brukere i å bruke dataplattformen Dapla for å <a href=\"https://wiki.ssb.no/pages/viewpage.action?pageId=115278064\" target=\"planlegge \">planlegge</a>, <a href=\"https://wiki.ssb.no/pages/viewpage.action?pageId=115281281\" target=\"bygge\">bygge</a> og <a href=\"https://wiki.ssb.no/pages/viewpage.action?pageId=117149061\" target=\"Fase 5&6: Klargjøre og analysere\">produsere</a> statistikk. Den er skrevet i kjørende kode. \n",
+    "\n",
+    "Veledningsteksten er skrevet i <a href=\"https://daringfireball.net/projects/markdown/\" target=\"Markdown Project Page\">Markdown</a>, mens eksemplene er skrevet i <a href=\"https://spark.apache.org/docs/latest/api/python/index.html\" target=\"Spark Python API Docs\">Pyspark</a>, <a href=\"https://www.python.org/\" target=\"python.org\">Python</a> og <a href=\"https://www.r-project.org/\" target =\"r-project.org\">R</a>.\n",
+    "\n",
+    "Utviklingen av veilederen er behovsstyrt og må forholde seg til et produksjonssystem i utvikling.\n",
+    "\n",
     "### Forklare bruk av veilederen\n",
     "\n",
     "#### navigering\n",
